--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                 </div>
                 <div class="tab-contents" id="Experience">
                     <ul>
-                        <li><span>Coordinator</span><br>Gravitas 22 </li>
+                        
                         <li><span>Coordinator</span><br> Riviera 23</li>
                         <li><span>Manager</span><br>Gravitas 23</li>
+                        <li><span>Organiser</span><br>Riviera 24 </li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="Education">
@@ -108,25 +109,25 @@
             <div class="work">
                 <img src="work-1.png">
                 <div class="layer">
-                    <h3> Media APP</h3>
-                    <P>The app let you know to hear music in your way the way you like </P>
+                    <h3>Collab Canvas</h3>
+                    <P>The app let you know to Design and Draw the Pages </P>
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="work-2.png">
                 <div class="layer">
-                    <h3>Social Media APP</h3>
-                    <P>The app let you know to connect music in your way the way you like </P>
+                    <h3>Crytolock</h3>
+                    <P>The app let you know to Encrypt and Decrypt your file </P>
                     <a href="#"><i class="fa-solid fa-link"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="work-3.png">
                 <div class="layer">
-                    <h3>Spotiy APP</h3>
-                    <P>The app let you know to hear music in your way the way you like </P>
-                    <a href="my-cv.pdf" target="_blank"><i download class="fa-solid fa-link"></i></a>
+                    <h3>Simpli Read</h3>
+                    <P>The app let you know to Summarize the lengthy article </P>
+                    <a href="Mohd_Safwan_Javed__Resume__ (5).pdf" target="_blank"><i download class="fa-solid fa-link"></i></a>
                 </div>
             </div>
         </div>
@@ -141,16 +142,16 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="Subtitle">Contact Me</h1>
-                <p> <i class="fa-solid fa-paper-plane"></i>contact@xyz.com
+                <p> <i class="fa-solid fa-paper-plane"></i>safwanjaved24.com
                 </p>
-                <p><i class="fa-solid fa-square-phone"></i>012345678</p>
+                <p><i class="fa-solid fa-square-phone"></i>8707534276</p>
                 <div class="social-icons">
                     <a href="https://facebook.com/"><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-twitter-square"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="Mohd_Safwan_Javed__Resume__ (5).pdf" download class="btn btn2">Download CV</a>
             </div>
             
             <div class="contact-right">
